--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 log.txt
+.DS_Store
+rconc/tintin.cpp
+rconc/otintin.cpp
+rconc/#inc.cpp
+.DS_Store
+.DS_Store
