--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install django
-        pip install mcipc=2.3.3
+        pip install mcipc==2.3.3
     - name: Migrate
       run: |
         python manage.py makemigrations
