--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,3 +30,9 @@ jobs:
       run: |
         python manage.py makemigrations
         python manage.py migrate
+    - name: "Test:views.py"
+      run: |
+        cd rconc
+        python views.py
+        cd ../
+    
