--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -30,3 +29,6 @@ jobs:
       run: |
         python manage.py makemigrations
         python manage.py migrate
+    - name: "Test: URLs"
+      run: |
+        python manage.py test
