--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,15 +20,24 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
+    - name: 必要パッケージのインストール
       run: |
         python -m pip install --upgrade pip
         pip install django
         pip install mcipc==2.3.3
-    - name: Migrate
+    - name: マイグレーション
       run: |
         python manage.py makemigrations
         python manage.py migrate
-    - name: "Test: URLs"
+    - name: "Test: URLのレスポンステスト"
       run: |
-        python manage.py test
+        python3 manage.py test rconc.tests.DjagoMinecraftUrlTest.ResponseTest
+    - name: "Test: URLのレスポンスチェック"
+      run: |
+        python3 manage.py test rconc.tests.DjagoMinecraftUrlTest.ResponseCheck
+    - name: "Test: URLのユーザーのログインテスト"
+      run: |
+        python3 manage.py test rconc.tests.DjagoMinecraftUrlTest.UserLoginTest
+    - name: "Test: URLのConfigの作成テスト"
+      run: |
+        python3 manage.py test rconc.tests.DjagoMinecraftUrlTest.ConfigTest
